* Reseed:     - Add new host i2p.mooo.com thx "bugme" (wii.torproject -at- gmail dot com)     - Handle % escaping in file URLs     - Do basic validation of router hash     - Add some more sanity checks